# 9gag_downloader

./: .gitignore  9gag_downloader.spec  CHANGES.md  README.md  STRUCTURE.md  build.py  create_icon.py  main.py  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  __main__.py  main.py
src/app/: app.py  checkboxes.py  destination_folder_frame.py  download_frame.py  header.py  progress_bar.py  source_file_frame.py
src/config/: __init__.py  colors.py  settings.py  theme.py
src/core/: __init__.py
src/core/downloader/: __init__.py  download_handler.py
src/core/models/: __init__.py  gag.py
src/core/parser/: __init__.py  html_parser.py
src/download_handler/: __init__.py  download_handler.py  downloader.py
src/logger/: logger.py
src/ui/: __init__.py  app.py
src/ui/components/: __init__.py  help_button.py
src/ui/frames/: __init__.py  checkboxes_frame.py  destination_folder_frame.py  download_frame.py  header_frame.py  progress_bar_frame.py  source_file_frame.py
src/utils/: __init__.py  colors.py  theme.py  utils.py
src/utils/helpers/: __init__.py  file_utils.py
src/utils/logging/: __init__.py  logger.py
tests/: README.md  __init__.py  run_tests.py  test_downloader.py  test_html_parser.py  test_settings_manager.py
